# KMITL-ObjectOrientedProgramming-Project

./: Dockerfile.backend  Dockerfile.frontend  detailed-running-instruction-th.md  docker-compose.yml  package.json  pnpm-lock.yaml  readme.md
backend/: .gitignore  pyproject.toml
backend/backend/: config.py  config_docker.py  controller_instance.py  dabase_instance.py  generate_key.py  main.py  secrets.py.example  seed.py
backend/backend/definitions/: api_data_model.py  controller.py  course.py  order.py  progress.py  user.py
backend/backend/lib/: authentication.py  convert_course_to_card_data.py
backend/backend/routers/: add_coupon.py  add_course_to_cart.py  authentication.py  buy_course.py  cart.py  category.py  course.py  course_create.py  course_material.py  create_course.py  example.py  get_teacher_by_course_id.py  info.py  learn_course.py  list_course_on_home_page.py  list_everything.py  order.py  review.py  search.py  study_latest_video.py  teacher.py  tempCodeRunnerFile.py  test.py  user.py  user_post.py  view_my_learning.py  view_video.py
backend/backend/secrets/: generate_key.py  key.pub  key.py
diagrams/plantuml/: AddCoupon(add_coupon_teacher).puml  AddCoupon(get_all_coupon).puml  add_coupon_course.puml  add_course_to_cart.puml  add_quiz.puml  add_video.puml  authen(login).puml  authen(register).puml  buy_course(buy_course_from_cart).puml  buy_course(checkout).puml  buy_course(get_all_payment).puml  buy_course.puml  cart(add_course_to_cart).puml  cart(get_cart).puml  cart(remove_course_in_cart).puml  cart.puml  category.puml  class_diagram.puml  course_material(add_image).puml  (+54 more)
frontend/: .env.example  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
(+144 files in other folders)
