[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Phuwit Puthipairoj <26784267+phuwit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
fastapi = "^0.109.2"
python-multipart = "^0.0.9"
joserfc = "^0.9.0"
argon2-cffi = "^23.1.0"
pydantic = {extras = ["email"], version = "^2.6.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
